Fix #152: replace the 'view more' links in filter panel: display everything with a scrollbar

--- a/ui/elastic/src/index.css
+++ b/ui/elastic/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.sk-panel__content {
+  max-height: 300px;
+  overflow: scroll;
+}
